--- a/requirements.yml
+++ b/requirements.yml
@@ -1,8 +1,8 @@
 ---
-#  - src: git@github.com:netology-code/mnt-homeworks-ansible.git
-#    scm: git
-#    version: "1.0.1"
-#    name: java
+  - src: git@github.com:netology-code/mnt-homeworks-ansible.git
+    scm: git
+    version: "1.0.1"
+    name: java
   - src: git@github.com:Ecriptor/elastic-role.git
     scm: git
     version: "1.0.2"
